--- a/nais.yaml
+++ b/nais.yaml
@@ -3,7 +3,7 @@ kind: Naisjob
 metadata:
   labels:
     team: teamia
-  name: ia-tjenester-metrikker-datafortelling
+  name: ia-datafortelling
   namespace: teamia
 spec:
   image: {{ image }}
@@ -12,7 +12,6 @@ spec:
   backoffLimit: 2
   envFrom:
     - secret: ia-tjenester-metrikker-datafortelling-secrets
-    - optional: true
   resources:
     limits:
       cpu: 500m
@@ -21,11 +20,11 @@ spec:
 apiVersion: nais.io/v1
 kind: Alert
 metadata:
-  name: ia-tjenester-metrikker-datafortelling
+  name: ia-datafortelling
   namespace: teamia
   labels:
     team: teamia
-    app: ia-tjenester-metrikker-datafortelling
+    app: ia-datafortelling
 spec:
   receivers:
     slack:
@@ -33,8 +32,8 @@ spec:
       prependText: '<!here> | '
   alerts:
     - alert: Naisjob feiler
-      description: Naisjob ia-tjenester-metrikker-datafortelling feiler i namespace teamia
-      expr: 'kube_job_failed{job_name=~"^ia-tjenester-metrikker-datafortelling.*", namespace="teamia"} > 0'
+      description: Naisjob ia-datafortelling feiler i namespace teamia
+      expr: 'kube_job_failed{job_name=~"^ia-datafortelling.*", namespace="teamia"} > 0'
       for: 1m
-      action: "Se logger på https://logs.adeo.no -> søk etter `pod:ia-tjenester-metrikker-datafortelling AND namespace:teamia`"
+      action: "Se logger på https://logs.adeo.no -> søk etter `pod:ia-datafortelling AND namespace:teamia`"
       severity: danger
