--- a/nais.yaml
+++ b/nais.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "*/15 * * * *"
+  schedule: "0 9 * * *"
   backoffLimit: 2
   envFrom:
     - secret: ia-tjenester-metrikker-datafortelling-secrets
