--- a/nais.yaml
+++ b/nais.yaml
@@ -10,13 +10,14 @@ spec:
   ttlSecondsAfterFinished: 340
   schedule: "0 9 * * *"
   backoffLimit: 2
-  filesFrom:
-    - secret: ia-tjenester-metrikker-datafortelling-secrets
-      mountPath: /var/run/secrets/ia-tjenester-metrikker-datafortelling-secrets
   resources:
     limits:
       cpu: 500m
       memory: 1Gi
+  gcp:
+    bigQueryDatasets:
+      - name: ia_tjenester_metrikker
+        permission: READ
 ---
 apiVersion: nais.io/v1
 kind: Alert
