--- a/nais.yaml
+++ b/nais.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "0 9 * * *"
+  schedule: "*/10 * * * *"
   backoffLimit: 2
   resources:
     limits:
