Legger ia-tjenester-metrikker-datastory-secret i google secret manager, henter den ut i nais.yaml

--- a/nais.yaml
+++ b/nais.yaml
@@ -18,6 +18,8 @@ spec:
     bigQueryDatasets:
       - name: ia_tjenester_metrikker
         permission: READ
+  envFrom:
+    - secret: ia-tjenester-metrikker-datastory-secrets # value is the secret name in Google Secret Manager
 ---
 apiVersion: nais.io/v1
 kind: Alert
