--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,11 @@
-*
-!bq_utils.py
-!config.py
-!ds.py
-!dtos.py
-!fetch_metrics.py
-!main.py
-!prepare_data.py
-!requirements.txt
-!secrets_handler.py
-!envs.json
+.git
+.gitignore
+coverage
+.env
+Dockerfile
+README.md
+docker-compose.yml
+.DS_Store
+venv
+.vscode
+.idea
