--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,52 @@
-google-cloud-bigquery>=2.30.1
-google-auth>=2.3.3
-datastory>=0.1.12
-pandas>=1.3.4
-plotly>=5.4.0
+appnope==0.1.3
+backcall==0.2.0
+black==22.6.0
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+datastory==0.1.13
+decorator==5.1.1
+google-api-core==2.8.2
+google-auth==2.9.1
+google-cloud-bigquery==3.2.0
+google-cloud-bigquery-storage==2.14.0
+google-cloud-core==2.3.1
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+grpcio==1.47.0
+grpcio-status==1.47.0
+idna==3.3
+ipython==8.4.0
+jedi==0.18.1
+matplotlib-inline==0.1.3
+mypy-extensions==0.4.3
+numpy==1.23.1
+packaging==21.3
+pandas==1.4.3
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.5.2
+plotly==5.9.0
+prompt-toolkit==3.0.30
+proto-plus==1.20.6
+protobuf==4.21.2
+ptyprocess==0.7.0
+pyarrow==8.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.12.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.28.1
+rsa==4.8
+six==1.16.0
+tenacity==8.0.1
+tomli==2.0.1
+traitlets==5.3.0
+urllib3==1.26.10
+wcwidth==0.2.5
