Endret jobb-schedule til en gang i timen mellom kl 07 og 17. Byttet fra limit til request i nais.yaml

--- a/nais.yaml
+++ b/nais.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "0 2 * * *"
+  schedule: "* 7-17/1 * * *"
   backoffLimit: 2
   resources:
-    limits:
+    requests:
       cpu: 500m
       memory: 1Gi
   gcp:
