--- a/nais.yaml
+++ b/nais.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "* 7-17/1 * * *"
+  schedule: "0 7-17/1 * * *"
   backoffLimit: 2
   gcp:
     bigQueryDatasets:
