--- a/nais.yaml
+++ b/nais.yaml
@@ -10,6 +10,12 @@ spec:
   ttlSecondsAfterFinished: 340
   schedule: "0 7-17/1 * * *"
   backoffLimit: 2
+  spec:
+  accessPolicy:
+    outbound:
+      external:
+        - host: nada.dev.intern.nav.no # for dev
+        - host: nada.intern.nav.no # for prod
   gcp:
     bigQueryDatasets:
       - name: ia_tjenester_metrikker
