--- a/.github/workflows/deploy-naisjob.yml
+++ b/.github/workflows/deploy-naisjob.yml
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+      packages: write
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
