Increase job frequency

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "45 7-17/ * * *"
+  schedule: "0 7-17/6 * * *"
   backoffLimit: 2
   gcp:
     bigQueryDatasets:
@@ -25,27 +25,3 @@ spec:
     outbound:
       external:
         - host: data.nav.no
-
----
-apiVersion: monitoring.coreos.com/v1
-kind: PrometheusRule
-metadata:
-  name: ia-datafortelling-alerts
-  namespace: teamia
-  labels:
-    team: teamia
-    app: ia-datafortelling
-spec:
-  groups:
-    - name: ia-datafortelling-alerts
-      rules:
-        - alert: NaisjobFeilet
-          expr: kube_job_failed{job_name=~"^ia-datafortelling.*", namespace="teamia"} > 0
-          for: 10m
-          annotations:
-            consequence: Datafortellingen ble ikke oppdatert
-            action: |-
-              Se logger på https://logs.adeo.no -> søk etter `pod:ia-datafortelling AND namespace:teamia`
-          labels:
-            namespace: teamia
-            severity: warning
