--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "0 7-17/6 * * *"
+  schedule: "0/10 7-17 * * *"
   backoffLimit: 2
   gcp:
     bigQueryDatasets:
