read-only-file-system: "false"

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -5,6 +5,8 @@ metadata:
     team: teamia
   name: ia-datafortelling
   namespace: teamia
+  annotations:
+    nais.io/read-only-file-system: "false"
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
