--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
-  schedule: "0/10 7-17 * * *"
+  schedule: "0 7-17/1 * * *"
   backoffLimit: 2
   gcp:
     bigQueryDatasets:
