--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -6,7 +6,7 @@ metadata:
     team: teamia
   namespace: teamia
   annotations:
-    nais.io/read-only-file-system: false
+    nais.io/read-only-file-system: "false"
 spec:
   image: {{ image }}
   ttlSecondsAfterFinished: 340
