--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -15,7 +15,7 @@ spec:
     requests:
       memory: 1Gi
   ttlSecondsAfterFinished: 340
-  schedule: "*/6 7-17 * * 1-5"
+  schedule: "*/10 7-17 * * 1-5"
   backoffLimit: 2
   gcp:
     bigQueryDatasets:
@@ -28,6 +28,8 @@ spec:
       value: data.nav.no
     - name: LEVERTE_IA_TJENESTER_QUARTO_ID
       value: 15c12bb7-30b0-4dc2-9ef0-afc72c2a03d8
+    - name: KEY_METRICS_QUARTO_ID
+      value: 2f6249ef-67bc-4fe6-bd35-502f2e739c4e
   accessPolicy:
     outbound:
       external:
