--- a/.github/workflows/deploy-naisjob.yml
+++ b/.github/workflows/deploy-naisjob.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Push to Google Artifact Registry
         uses: nais/docker-build-push@v0
         id: docker-push
@@ -33,15 +33,16 @@ jobs:
       image: ${{ steps.docker-push.outputs.image }}
 
   deploy-naisjob-to-prod:
+    permissions:
+      id-token: write
     name: Deploy to prod-gcp
     needs: docker-build-push
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: prod-gcp
           IMAGE: ${{ needs.docker-build-push.outputs.image }}
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           RESOURCE: .nais/prod.yaml
