--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-google-auth==2.30.0
-google-cloud-bigquery==3.25.0
-pandas==2.2.2
-plotly==5.22.0
-jupyter==1.0.0
+google-auth==2.35.0
+google-cloud-bigquery==3.26.0
+pandas==2.2.3
+plotly==5.24.1
+jupyter==1.1.1 # Vanskelig å se changelog med denne metapakken, kan være verdt å bytte til individuelle pakker?
 tabulate~=0.9.0
-db-dtypes==1.2.0
+db-dtypes==1.3.0
