--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -21,6 +21,16 @@ spec:
     bigQueryDatasets:
       - name: ia_tjenester_metrikker
         permission: READ
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: python
+      destinations:
+        - id: "grafana-lgtm"
+    logging:
+      destinations:
+        - id: loki
+        - id: elastic
   envFrom:
     - secret: teamia-nada-secret # from Google Secret Manager
   env:
