--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-google-auth==2.36.0
-google-cloud-bigquery==3.27.0
+db-dtypes==1.4.2
+google-auth==2.40.1
+google-cloud-bigquery==3.31.0
+jupyter==1.1.1
 pandas==2.2.3
-plotly==5.24.1
-jupyter==1.1.1 # Vanskelig å se changelog med denne metapakken, kan være verdt å bytte til individuelle pakker?
-tabulate~=0.9.0
-db-dtypes==1.3.0
+plotly==6.0.1
+tabulate==0.9.0
